fix rooms response and doc
